cabal-version: 3.0
name: dc-api
version: 1.0.0
extra-source-files:
  test/Test/Data/ChinookData.xml.gz
  test/Test/Data/schema-tables.json

flag profiling
  description: Configures the project to be profiling-compatible
  default: False
  manual: True

common common-all
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wmissing-export-lists
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import: common-all
  hs-source-dirs: src

  build-depends:
    aeson,
    autodocodec,
    autodocodec-openapi3,
    base,
    bytestring,
    deepseq,
    extra,
    graphql-parser,
    hashable,
    insert-ordered-containers,
    lens,
    lens-aeson,
    openapi3,
    scientific,
    servant,
    servant-client,
    servant-client-core,
    servant-openapi3,
    text,
    unordered-containers,
    http-media

  if !flag(profiling)
    -- ghc-heap-view can't be built with profiling
    build-depends: ghc-heap-view

  exposed-modules:
    Autodocodec.Extended
    Hasura.Backends.DataConnector.API
    Hasura.Backends.DataConnector.API.V0
    Hasura.Backends.DataConnector.API.V0.Aggregate
    Hasura.Backends.DataConnector.API.V0.Capabilities
    Hasura.Backends.DataConnector.API.V0.Column
    Hasura.Backends.DataConnector.API.V0.ConfigSchema
    Hasura.Backends.DataConnector.API.V0.ErrorResponse
    Hasura.Backends.DataConnector.API.V0.Expression
    Hasura.Backends.DataConnector.API.V0.Mutations
    Hasura.Backends.DataConnector.API.V0.OrderBy
    Hasura.Backends.DataConnector.API.V0.Query
    Hasura.Backends.DataConnector.API.V0.Explain
    Hasura.Backends.DataConnector.API.V0.Raw
    Hasura.Backends.DataConnector.API.V0.Relationships
    Hasura.Backends.DataConnector.API.V0.Scalar
    Hasura.Backends.DataConnector.API.V0.Schema
    Hasura.Backends.DataConnector.API.V0.Table
    Hasura.Backends.DataConnector.API.V0.Dataset
  other-modules:
    Hasura.Backends.DataConnector.API.V0.Name

test-suite tests-dc-api
  import: common-all
  type: exitcode-stdio-1.0
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    Diff,
    aeson,
    aeson-pretty,
    ansi-terminal,
    autodocodec,
    autodocodec-openapi3,
    base,
    bytestring,
    case-insensitive,
    containers,
    data-fix,
    deepseq,
    dc-api,
    directory,
    exceptions,
    file-embed,
    filepath,
    free,
    graphql-parser,
    hashable,
    http-client,
    http-types,
    lens,
    lens-aeson,
    lifted-base,
    monad-control,
    mtl,
    network-uri,
    openapi3,
    optparse-applicative,
    scientific,
    sandwich,
    servant,
    servant-client,
    servant-client-core,
    servant-openapi3,
    text,
    time,
    unordered-containers,
    vector,
    xml-conduit,
    xml-lens,
    yaml,
    zlib
  hs-source-dirs: test
  -- Turning off optimizations is intentional; tests aren't
  -- performance sensitive and waiting for compilation is a problem.
  ghc-options: -O0 -threaded
  main-is: Main.hs
  other-modules:
    Command
    Paths_dc_api
    Test.AgentClient
    Test.Data
    Test.DataExport
    Test.Expectations
    Test.HttpFile
    Test.Specs.CapabilitiesSpec
    Test.Specs.ConfigSpec
    Test.Specs.ErrorSpec
    Test.Specs.ExplainSpec
    Test.Specs.HealthSpec
    Test.Specs.MetricsSpec
    Test.Specs.QuerySpec
    Test.Specs.QuerySpec.AggregatesSpec
    Test.Specs.QuerySpec.BasicSpec
    Test.Specs.QuerySpec.CustomOperatorsSpec
    Test.Specs.QuerySpec.FilteringSpec
    Test.Specs.QuerySpec.OrderBySpec
    Test.Specs.QuerySpec.RelationshipsSpec
    Test.Specs.SchemaSpec
    Test.TestHelpers
