cabal-version: 3.0
name: dc-api
version: 1.0.0
extra-source-files:
  test/Test/Data/Chinook.xml.gz
  test/Test/Data/schema-tables.json
  test/Test/Data/edge-cases-schema-tables.json

flag profiling
  description: Configures the project to be profiling-compatible
  default: False
  manual: True

common common-all
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DataKinds
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
  ghc-options:
    -- Taken from https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode

library
  import: common-all
  hs-source-dirs: src

  build-depends:
    aeson,
    autodocodec,
    autodocodec-openapi3,
    base,
    bytestring,
    containers,
    deepseq,
    extra,
    graphql-parser,
    hashable,
    hasura-extras,
    insert-ordered-containers,
    lens,
    lens-aeson,
    openapi3,
    servant,
    servant-client,
    servant-openapi3,
    text,
    unordered-containers,
    http-media,
    witch

  exposed-modules:
    Hasura.Backends.DataConnector.API
    Hasura.Backends.DataConnector.API.V0
    Hasura.Backends.DataConnector.API.V0.Aggregate
    Hasura.Backends.DataConnector.API.V0.Capabilities
    Hasura.Backends.DataConnector.API.V0.Column
    Hasura.Backends.DataConnector.API.V0.ConfigSchema
    Hasura.Backends.DataConnector.API.V0.ErrorResponse
    Hasura.Backends.DataConnector.API.V0.Expression
    Hasura.Backends.DataConnector.API.V0.Function
    Hasura.Backends.DataConnector.API.V0.Mutations
    Hasura.Backends.DataConnector.API.V0.OrderBy
    Hasura.Backends.DataConnector.API.V0.Query
    Hasura.Backends.DataConnector.API.V0.Explain
    Hasura.Backends.DataConnector.API.V0.Raw
    Hasura.Backends.DataConnector.API.V0.Relationships
    Hasura.Backends.DataConnector.API.V0.Scalar
    Hasura.Backends.DataConnector.API.V0.Schema
    Hasura.Backends.DataConnector.API.V0.Table
    Hasura.Backends.DataConnector.API.V0.Target
    Hasura.Backends.DataConnector.API.V0.InterpolatedQuery
    Hasura.Backends.DataConnector.API.V0.Dataset
  other-modules:
    Hasura.Backends.DataConnector.API.V0.Name

test-suite tests-dc-api
  import: common-all
  type: exitcode-stdio-1.0
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    Diff,
    aeson,
    aeson-pretty,
    ansi-terminal,
    base,
    bytestring,
    case-insensitive,
    containers,
    dc-api,
    directory,
    exceptions,
    file-embed,
    filepath,
    free,
    graphql-parser,
    http-client,
    http-types,
    lens,
    lens-aeson,
    mtl,
    optparse-applicative,
    scientific,
    sandwich >= 0.1.3.0,
    servant,
    servant-client,
    servant-client-core,
    text,
    time,
    unordered-containers,
    uuid,
    xml-conduit,
    xml-lens,
    yaml,
    zlib
  hs-source-dirs: test
  -- Turning off optimizations is intentional; tests aren't
  -- performance sensitive and waiting for compilation is a problem.
  ghc-options: -O0 -threaded
  main-is: Main.hs
  other-modules:
    Command
    Paths_dc_api
    Test.AgentAPI
    Test.AgentClient
    Test.AgentDatasets
    Test.AgentTestContext
    Test.Data
    Test.DataExport
    Test.Expectations
    Test.HttpFile
    Test.Specs.CapabilitiesSpec
    Test.Specs.ErrorSpec
    Test.Specs.ExplainSpec
    Test.Specs.FunctionsSpec
    Test.Specs.HealthSpec
    Test.Specs.MetricsSpec
    Test.Specs.MutationSpec
    Test.Specs.MutationSpec.DeleteSpec
    Test.Specs.MutationSpec.InsertSpec
    Test.Specs.MutationSpec.UpdateSpec
    Test.Specs.QuerySpec
    Test.Specs.QuerySpec.AggregatesSpec
    Test.Specs.QuerySpec.BasicSpec
    Test.Specs.QuerySpec.CustomOperatorsSpec
    Test.Specs.QuerySpec.FilteringSpec
    Test.Specs.QuerySpec.ForeachSpec
    Test.Specs.QuerySpec.OrderBySpec
    Test.Specs.QuerySpec.RedactionSpec
    Test.Specs.QuerySpec.RelationshipsSpec
    Test.Specs.SchemaSpec
    Test.TestHelpers
