cabal-version: 3.0
name:          graphql-parser
version:       0.2.0.0
synopsis:      A native Haskell GraphQL parser.
homepage:      https://github.com/hasura/graphql-parser-hs
bug-reports:   https://github.com/hasura/graphql-parser-hs/issues
author:        Vamshi Surabhi
maintainer:    vamshi@hasura.io
copyright:     2018–2022 Hasura Inc., 2015 J. Daniel Navarro
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple
tested-with:   GHC ==8.10.7 || ==9.0.2 || ==9.2.2

source-repository head
  type:     git
  location: https://github.com/hasura/graphql-parser-hs

common common-all
  -- This warning strategy was inspired by Max Tagher's 'Enable All the
  -- Warnings' blog post.
  --
  -- NOTE: '-Wno-prepositive-qualified-module' is currently a workaround for
  -- https://github.com/haskell/cabal/pull/7352
  ghc-options:
    -Weverything -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-missed-specialisations -Wno-all-missed-specializations
    -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module -Wno-unrecognised-pragmas

  if impl(ghc >=9.2)
    ghc-options: -Wno-implicit-lift

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BlockArguments
    ConstraintKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RoleAnnotations
    StandaloneKindSignatures
    StrictData
    TupleSections

library
  import:          common-all
  hs-source-dirs:  src
  build-depends:
    , aeson                 >=1.5
    , attoparsec            >=0.14
    , base                  >=4.7
    , bytestring            >=0.10
    , deepseq               >=1.4
    , hashable              >=1.3
    , hedgehog              >=1.1
    , prettyprinter         >=1.7
    , scientific            >=0.3
    , template-haskell      >=2.16
    , text                  >=1.2
    , text-builder          >=0.6
    , th-compat             >=0.1
    , th-lift-instances     >=0.1
    , unordered-containers  >=0.2

  exposed-modules:
    Language.GraphQL.Draft.Generator
    Language.GraphQL.Draft.Parser
    Language.GraphQL.Draft.Printer
    Language.GraphQL.Draft.Syntax
    Language.GraphQL.Draft.Syntax.Internal
    Language.GraphQL.Draft.Syntax.QQ

  other-modules:
    Language.GraphQL.Draft.Syntax.Name

test-suite graphql-parser-test
  import:         common-all
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    BlockStrings
    Keywords

  build-depends:
    , base
    , bytestring
    , graphql-parser
    , hedgehog
    , prettyprinter
    , text
    , text-builder

benchmark graphql-parser-bench
  import:         common-all
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Benchmark.hs
  build-depends:
    , base
    , bytestring
    , graphql-parser
    , prettyprinter
    , tasty-bench
    , text
    , text-builder
